# bioalgo

./: .gitignore  ReadMe  ReadMe.md  bioalgo.cabal  bioalgo.md  bioalgo.org
app/: Main.hs
app/cltools/: Main.hs
app/kmers/: Main.hs
src/Challenges/: frequentWordsWithMismatchsAndRevComps.hs
src/Challenges/HiddenMessages/: appxPatterns.hs  frequentWordsWithMismatch.hs  hammingDistanceProblem.hs
src/Challenges/Motifs/: enumerated.hs  greedilySearchedMotifs.hs  medianString.hs  profileMost.hs
src/Chapters/Replication/Patterns/: gcDiff.hs  runningCount.hs
src/lib/: Dna.hs  Kmers.hs  Lib.hs
src/lib/Dna/: Dna.hs  Kmer.hs  Replication.hs
src/lib/Genome/Data/: FrequencyArray.hs  Lexicog.hs  Lexicographical.hs  LexographicalOrder.hs
src/lib/Genome/Dna/: .#FrequencyArray.hs  Dna.hs  Kmer.hs  Motif.hs  Replication.hs  Variant.hs
src/lib/Util/: Command.hs  Number.hs  Util.hs
test/: Spec.hs
test/Test/Dna/: Dna.hs  Kmer.hs
test/Test/Examples/: Prices.hs
test/Test/Examples/Plots/: Plots.hs  example10.hs  priceHistory.hs
test/Test/Genome/Dna/: Dna.hs  Kmer.hs  Motif.hs
test/Test/Util/: Number.hs  Util.hs
test/lib/: Kmers.hs
