name:                bioalgo
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/visood/bioalgo#readme
license:             BSD3
license-file:        LICENSE
author:              Vishal Sood
maintainer:          vishal.chandra.sood@gmail.com
copyright:           2016 Vishal Sood
category:            Bioinformatics
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src/lib
  exposed-modules:     Lib
                     , Dna
                     , Kmers
  build-depends:       base >= 4.7 && < 5
                     , filepath
                     , containers
  default-language:    Haskell2010

executable bioalgo-tools
  hs-source-dirs:      app/cltools
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bioalgo
                     , containers
  default-language:    Haskell2010
test-suite bioalgo-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , QuickCheck >= 2.8
                     , HUnit >= 1.0
                     , bioalgo
                     , containers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/visood/bioalgo
